--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -35,6 +35,7 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@carbon/devtools-component-list": "2.7.7",
     "@carbon/icons-react": "^10.37.0",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
