--- a/packages/web-extension/src/manifest.json
+++ b/packages/web-extension/src/manifest.json
@@ -5,16 +5,14 @@
   "description": "{package_description}",
   "author": "{package_author}",
   "host_permissions": [
-    "activeTab",
-    "storage",
     "https://*.carbondesignsystem.com/*"
   ],
   "background": {
     "service_worker": "/background/index.js"
   },
   "web_accessible_resources": [{
-    	"resources": [ "/inject/index.css" ],
-      "matches": ["<all_urls>"]
+    "resources": [ "/inject/index.css" ],
+    "matches": ["<all_urls>"]
   }],
   "icons": {
     "16": "/media/16x16-mid.png",
@@ -23,7 +21,7 @@
     "64": "/media/64x64-mid.png",
     "128": "/media/128x128-mid.png"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "/popup/index.html"
   },
   "options_ui": {
