--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -31,6 +31,7 @@
     "carbon-components": "^10.41.0",
     "carbon-components-react": "^7.41.0",
     "color": "^3.1.2",
+    "grid-overlay": "^1.3.0",
     "node-fetch": "^2.6.1",
     "url": "^0.11.0"
   },
